rnsc/test_data/integration/error/parser/instructions/ldc_label.rns
.class LdcLabel
.super java/lang/Object

.method static main ([Ljava/lang/String;)V
  .code stack 2 locals 1
    ldc my_label:
    return
  .code_end
.method_end
.class_end
